Upgarded to Prism 8.0.0.1909 + made corresponding adjustments, support navigations and Dialog Service (view must implement INavigation)

--- a/Source/Prism.CastleWindsor/Prism.CastleWindsor.csproj
+++ b/Source/Prism.CastleWindsor/Prism.CastleWindsor.csproj
@@ -2,21 +2,21 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
 
   <Import Project="..\..\build\common.props" />
 
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>net461;net472;</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
       <PackageId>Prism.CastleWindsor</PackageId>
       <Title>Castle Windsor Plugin for Prism</Title>
       <Description>Allows prism to make full use of Castle Windsor best of breed IoC</Description>
       <PackageTags>castle, windsor, prism</PackageTags>
-      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
       <AssemblyName>Prism.CastleWindsor</AssemblyName>
       <RootNamespace>Prism.CastleWindsor</RootNamespace>
   </PropertyGroup>
@@ -26,15 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="4.4.0" />
-    <PackageReference Include="Castle.Windsor" Version="5.0.1" />
-    <PackageReference Include="CommonServiceLocator" Version="2.0.4" />
-    <PackageReference Include="Prism.Core" Version="7.2.0.1422" />
-    <PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
+    <PackageReference Include="Castle.Windsor" Version="5.1.1" />
+    <PackageReference Include="CommonServiceLocator" Version="2.0.6" />
+    <PackageReference Include="Prism.Core" Version="8.0.0.1909" />
+    <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
   </ItemGroup>
 </Project>
